--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: SwimAnimation
 main: AniSoonDEV\SwimAnimation\Main
-api: 3.0.0-ALPHA12
-version: 0.1
+api: 3.1.0
+version: 0.2
 author: AniSoonDEV, CLADevs Team
